test/runtime/fail/runtime/neg_nil.hy

// expect error: Expected number, found nil

let a = nil
let b = -a
